--- a/layout.html
+++ b/layout.html
@@ -21,5 +21,6 @@
         <footer>
             <p>Data collected from <a href="https://theoehrly.github.io/Fast-F1/">fastf1</a></p>
         </footer>
+        <p>test</p>
     </body>
 </html>
