--- a/layout.html
+++ b/layout.html
@@ -18,6 +18,7 @@
         <main>
             {%block main%}{%endblock%}
         </main>
+        <p>Hello</p>
         <footer>
             <p>Data collected from <a href="https://theoehrly.github.io/Fast-F1/">fastf1</a></p>
         </footer>
